--- a/src/components/toolbar/toolbar.md.scss
+++ b/src/components/toolbar/toolbar.md.scss
@@ -14,7 +14,6 @@ $toolbar-order-md: (
   menu-toggle-end: 7,
 );
 
-$toolbar-md-padding:                     4px !default;
 $toolbar-md-title-font-size:             2rem !default;
 $toolbar-md-title-text-color:            color-contrast($colors-md, $toolbar-md-background, md) !default;
 
