--- a/src/components/toolbar/toolbar.wp.scss
+++ b/src/components/toolbar/toolbar.wp.scss
@@ -14,7 +14,6 @@ $toolbar-order-wp: (
   menu-toggle-end: 7,
 );
 
-$toolbar-wp-padding:                     4px !default;
 $toolbar-wp-title-padding:               0 6px !default;
 $toolbar-wp-title-font-size:             1.5rem !default;
 $toolbar-wp-title-font-weight:           bold !default;
