--- a/src/themes/ionic.theme.default.ios.scss
+++ b/src/themes/ionic.theme.default.ios.scss
@@ -21,6 +21,7 @@ $content-ios-margin:                   $content-margin !default;
 // --------------------------------------------------
 
 $toolbar-ios-height:                   44px !default;
+$toolbar-ios-padding:                  4px !default;
 $toolbar-ios-background:               $toolbar-background !default;
 $toolbar-ios-border-color:             rgba(0, 0, 0, .3) !default;
 $toolbar-ios-text-color:               $toolbar-text-color !default;
