--- a/src/themes/ionic.theme.default.md.scss
+++ b/src/themes/ionic.theme.default.md.scss
@@ -21,6 +21,7 @@ $content-md-margin:                   $content-margin !default;
 // --------------------------------------------------
 
 $toolbar-md-height:                   56px !default;
+$toolbar-md-padding:                  4px !default;
 $toolbar-md-background:               $toolbar-background !default;
 $toolbar-md-border-color:             $toolbar-border-color !default;
 $toolbar-md-text-color:               #424242 !default;
