--- a/src/themes/ionic.theme.default.wp.scss
+++ b/src/themes/ionic.theme.default.wp.scss
@@ -21,6 +21,7 @@ $content-wp-margin:                   $content-margin !default;
 // --------------------------------------------------
 
 $toolbar-wp-height:                   46px !default;
+$toolbar-wp-padding:                  4px !default;
 $toolbar-wp-background:               $toolbar-background !default;
 $toolbar-wp-border-color:             $toolbar-border-color !default;
 $toolbar-wp-text-color:               $toolbar-text-color !default;
